update edit info user

--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
 <div class="row gx-5 align-items-center">
     <div class="aftersearch text-center">
-        <img src="https://github.com/de9vp/Contact/blob/master/images/why-us.png?raw=true" style="width: 274px" alt="">
+        <img src="~/Avatars/home.png" style="width: 274px" alt="">
     </div>
     <div class="aftersearch text-center">
         <span style="font-family: 'Ephesis', cursive; font-size: 3em; ">" Adventure is the best way to learn. "</span>
