--- a/Bilinguals/Views/Manage/ChangePassword.cshtml
+++ b/Bilinguals/Views/Manage/ChangePassword.cshtml
@@ -3,38 +3,55 @@
     ViewBag.Title = "Change Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="row gx-5">
+   @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "row", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <br />
+        <h4 class="text-center"><i class="bi bi-filter-right"></i><i class="bi bi-gear-fill"></i><i class="bi bi-filter-left"></i></h4>
+        <br />
+        <div class="row g-2 justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.PasswordFor(m => m.OldPassword, new { style = "width:17em;", placeholder = "Password", type = "password", id = "floatingPassword", @class = "form-control rounded-pill1" })
+                    <label for="floatingPassword">Current Password</label>
+                </div>
+            </div>
+        </div>
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+        <div class="row g-2 justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.PasswordFor(m => m.NewPassword, new { style = "width:17em;", placeholder = "Password", type = "password", id = "floatingPassword", @class = "form-control rounded-pill1" })
+                    <label for="floatingPassword">New Password</label>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+
+        <div class="row g-2 justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { style = "width:17em;", placeholder = "Password", type = "password", id = "floatingPassword", @class = "form-control rounded-pill1" })
+                    <label for="floatingPassword">Confirm Password</label>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+
+        <div class="row g-2 justify-content-md-center">
+            <div class="col-md-offset-2 col-md-auto">
+                <input type="submit" value="Change password" class="btn btn-custom1" />
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+
+        <div class="row g-2 justify-content-md-center">
+            @Html.ValidationSummary("", new { @class = "text-danger col-md-auto" })
         </div>
-    </div>
-}
+        
+    }
+</div>
+
+
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
