--- a/Bilinguals/Views/Manage/Index.cshtml
+++ b/Bilinguals/Views/Manage/Index.cshtml
@@ -1,9 +1,12 @@
 ﻿@model Bilinguals.Models.IndexViewModel
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Manage";
 }
 
 <div class="row gx-5">
+    <p class="text-success">@ViewBag.StatusMessage</p>
+
     <section class="rounded-pill" style="background-color: #e9e9ff;">
         <div class="py-5">
             <div class="row">
@@ -31,17 +34,17 @@
                             <p class="text-muted mb-1">Full Stack Developer</p>
                             <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <button type="button" class="btn btn-outline-primary">
+                                <button type="button" class="btn btn-outline-primary btn-outline-custom2 rounded-pill1">
                                     @if (Model.HasPassword)
                                     {
-                                        @Html.ActionLink("Change your password", "ChangePassword", routeValues: null, htmlAttributes: new { style = "color: inherit; text-decoration: none;" })
+                                        @Html.ActionLink("Change Password", "ChangePassword", routeValues: null, htmlAttributes: new { style = "color: inherit; text-decoration: none;" })
                                     }
                                     else
                                     {
                                         @Html.ActionLink("Create", "SetPassword", routeValues: null, htmlAttributes: new { style = "color: inherit; text-decoration: none;" })
                                     }
                                 </button>
-                                <button type="button" class="btn btn-outline-primary ms-1">Message</button>
+                                <a href="/manage/edit/@User.Identity.GetUserId()" type="button" class="btn btn-outline-custom2 rounded-pill1 ms-1">Edit Info</a>
                             </div>
                         </div>
                     </div>
@@ -58,7 +61,7 @@
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                                     <i class="fab fa-twitter fa-lg" style="color: #55acee;"></i>
-                                    <p class="mb-0"></p>
+                                    <p class="mb-0">mdbootstrap</p>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center p-3">
                                     <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
@@ -104,6 +107,15 @@
                             <hr>
                             <div class="row">
                                 <div class="col-sm-3">
+                                    <p class="mb-0">Email</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">@Model.Email</p>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
                                     <p class="mb-0">Phone</p>
                                 </div>
                                 <div class="col-sm-9">
@@ -113,19 +125,10 @@
                             <hr>
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <p class="mb-0">Mobile</p>
+                                    <p class="mb-0">Date Of Birth</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">(098) 765-4321</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Address</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
+                                    <p class="text-muted mb-0">@Model.DateOfBirth</p>
                                 </div>
                             </div>
                         </div>
@@ -206,7 +209,7 @@
 </div>
 
 
-<p class="text-success">@ViewBag.StatusMessage</p>
+
 <div>
     <h4>Change your account settings</h4>
     <hr />
@@ -282,18 +285,22 @@
             return {
                 init: function () {
                     bsModal.init(() => { bsModal.setState() }, (newImage) => {
-                        //change image
-                        console.log("da them");
-                        $('.avatar').removeAttr('src').attr('src', `\Avatars/${newImage.path}`);
+                        //update ui image
+                        $('.avatar').removeAttr('src').attr('src', `\/Avatars/${newImage.path}`);
                         $('.avatarbtn').attr('data-imageid', newImage.id);
                         setUrl();
                         $('.avatarremove').removeAttr('hidden');
+                        $('#avatarmini').remove();
+                        $('#avatardefault').remove();
+                        $('#avatarnavbar').append(`<span id="avatarmini"><img src="\/Avatars/${newImage.path}" alt="" width="32" height="32" class="rounded-circle me-2 border border-2"></span>`);
                     });
                     bsModalRemove.init(() => { bsModalRemove.setState() }, (data) => {
-                        console.log("da xoa");
-                        $('.avatar').removeAttr('src').attr('src', '\Avatars/defaultAvatar.jpg');
+                        //update ui image
+                        $('.avatar').removeAttr('src').attr('src', '\/Avatars/defaultAvatar.jpg');
                         $('.avatarbtn').attr('data-imageid', '');
-                        $('.avatarremove').attr('hidden','');
+                        $('.avatarremove').attr('hidden', '');
+                        $('#avatarmini').remove();
+                        $('#avatarnavbar').append(`<span id="avatardefault"><i style=" font-size: 18px;" class="bi bi-person-fill mx-1"></i></span>`);
                     });
                 },
             }
