--- a/Bilinguals/Views/Account/Login.cshtml
+++ b/Bilinguals/Views/Account/Login.cshtml
@@ -4,58 +4,71 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
+
+<div class="row gx-5 justify-content-center py-5">
+    <div class="rounded-pill py-3" style="width: 25em; background-color: white;">
+        <section class="row" id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+
+                <div class="row g-2 my-3 justify-content-md-center">
+                    <div class="col-md-auto">
+                        <div class="form-floating">
+                            <input autocomplete="off" required="required" type="email" value="" name="Email" class="form-control rounded-pill2 align-content-center px-5" id="floatingInput" placeholder="name@example.com">
+                            <label class="" for="floatingInput">Email</label>
+                            @Html.ValidationMessageFor(model => model.Email, "", new { style = "font-size: 12px;position: absolute;", @class = "text-danger text-center" })
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+
+                <div class="row g-2 my-3 justify-content-md-center">
+                    <div class="col-md-auto">
+                        <div class="form-floating">
+                            @Html.PasswordFor(model => model.Password, new { name = "Password", placeholder = "Password", type = "password", id = "floatingPassword", @class = "form-control rounded-pill2 px-5" })
+                            <label for="floatingPassword">Password</label>
+                        </div>
+                        @Html.ValidationMessageFor(model => model.Password, "", new { style = "font-size: 12px;position: absolute;", @class = "text-danger" })
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
+
+                <div class="row g-2 mt-2 justify-content-md-center">
+                    <div class="col-md-auto">
+                        <div class="form-check form-switch">
+                            @Html.CheckBoxFor(m => m.RememberMe, htmlAttributes: new {id = "flexSwitchCheckDefault", @class = "form-check-input" })
+                            @Html.LabelFor(m => m.RememberMe, htmlAttributes: new { style = "font-size:14px;", id = "flexSwitchCheckDefault", @class = "form-check-label" })
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-2 mb-2 justify-content-md-center mx-5 ">
+                    <input type="submit" value="Log in" class="btn btn-custom1 rounded-pill1" />
+                    <a href="/Account/Register" type="button" style="text-decoration: none; color: #8f8f8f; font-size: 14px;" class="text-center">Register</a>
+                </div>
+                <div class="row g-2 mb-2 justify-content-md-center">
+                    <div class="col-md-auto">
+                        <a>Or</a>
+                    </div>
+                </div>
+                <div class="row g-2 mb-2 mx-5">
+                        <button class="btn btn-outline-secondary rounded-pill2 col mx-2"><i class="bi bi-facebook"></i></button>
+                        <button class="btn btn-outline-secondary rounded-pill2 col mx-2"><i class="bi bi-google"></i></button>
+                </div>
+
+
+
                 @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+            <p>
+                @Html.ActionLink("Forgot your password?", "ForgotPassword")
+            </p>*@
             }
         </section>
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
+    @*<div class="col-md-4">
+            <section id="socialLoginForm">
+                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+            </section>
+        </div>*@
 </div>
 
 @section Scripts {
