--- a/Bilinguals/Views/Shared/_Layout.cshtml
+++ b/Bilinguals/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
     <footer class="footer mt-auto bg-custom1 text-center py-2">
         <div class="container">
             <div class="text-white-50 small">
-                <p>&copy; @DateTime.Now.Year - Duy Phuc To</p>
+                <p class="mb-1">&copy; @DateTime.Now.Year - Duy Phuc To</p>
                 <a href="#!">Skyper</a>
                 <span class="mx-1">&middot;</span>
                 <a href="#!">Facebook</a>
