--- a/Bilinguals/Views/Account/Register.cshtml
+++ b/Bilinguals/Views/Account/Register.cshtml
@@ -3,55 +3,72 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+<div class="row gx-5">
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        
+        <div class="row g-2 justify-content-md-center">
+            <div class="col-md-auto">
+                <h2>@ViewBag.Title.</h2>
+                <h4>Create a new account.</h4>
+                <hr />
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Lastname, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Lastname, new { @class = "form-control" })
+        <div class="row g-2 mb-4 justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", autocomplete = "off", required = "required", id = "floatingInput", placeholder = "name@example.com" })
+                    @Html.LabelFor(m => m.FirstName, new { @class = "", @for = "floatingInput" })
+                </div>
+            </div>
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.TextBoxFor(m => m.Lastname, new { @class = "form-control", autocomplete = "off", required = "required", id = "floatingInput", placeholder = "name@example.com" })
+                    @Html.LabelFor(m => m.Lastname, new { @class = "", @for = "floatingInput" })
+                </div>
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
 
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        <div class="row g-2 mb-4 justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autocomplete = "off", required = "required", id = "floatingInput", placeholder = "name@example.com" })
+                    @Html.LabelFor(m => m.Email, new { @class = "", @for = "floatingInput" })
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+
+        <div class="row g-2 mb-4 justify-content-md-center">
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", autocomplete = "off", required = "required", id = "floatingInput", placeholder = "name@example.com" })
+                    @Html.LabelFor(m => m.Password, new { @class = "", @for = "floatingInput" })
+                </div>
+            </div>
+            <div class="col-md-auto">
+                <div class="form-floating">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", autocomplete = "off", required = "required", id = "floatingInput", placeholder = "name@example.com" })
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "", @for = "floatingInput" })
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+
+        <div class="row g-2 mb-4 justify-content-md-center">
+            @Html.ValidationSummary("", new { @class = "text-danger" })
         </div>
-    </div>
-}
+
+        <div class="row g-2 justify-content-md-center">
+            <div class="col-md-auto">
+                <input type="submit" class="btn btn-custom1" value="Register" />
+            </div>
+        </div>
+    }
+
+</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
