--- a/Bilinguals/Views/Shared/_Layout.cshtml
+++ b/Bilinguals/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuRepo">
                                 <li><a class="dropdown-item" href="~/groups/mysentence"><i class="bi bi-chat-square-quote-fill me-2"></i>My Sentence</a></li>
-                                <li><button class="dropdown-item" type="button"><i class="bi bi-file-earmark-word-fill me-2"></i>Vocabulary</button></li>
+                                <li><button class="dropdown-item" type="button"><i class="bi bi-translate me-2"></i>Vocabulary</button></li>
                                 <li><a class="dropdown-item" href="~/dialogs/mydialog"><i class="bi bi-chat-square-text-fill me-2"></i>My Dialog</a></li>
                             </ul>
                         </div>
