--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PagedList.IPagedList<Bilinguals.Domain.Models.Sentence>
 @using PagedList.Mvc;
+@using Microsoft.AspNet.Identity
 
 @{
     ViewBag.Title = "Trang chủ";
@@ -18,7 +19,7 @@
     </div>
     <form>
         <div class="row mb-3 justify-content-center">
-            <input style="width:30rem" type="text" class="form-control text-center rounded-pill" id="searchText" name="searchText" value="@searchText" placeholder="Enter the sentence or vocabulary">
+            <input autocomplete="off" style="width:30rem" type="text" class="form-control text-center rounded-pill" id="searchText" name="searchText" value="@searchText" placeholder="Enter the sentence or vocabulary">
         </div>
         <div class="row mb-3 justify-content-center">
             <button type="submit" style="width: 8rem;" class="btn btn-custom1 rounded-pill"> <span class="bi-search me-2"></span>Search</button>
@@ -38,11 +39,11 @@
                 <button class="nav-link" id="pills-dialog-tab" data-bs-toggle="pill" data-bs-target="#pills-dialog" type="button" role="tab" aria-controls="pills-dialog" aria-selected="false">Search by Dialog</button>
             </li>
             @*<li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Search by Irregular Verbs</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Search by My Vocabulary</button>
-            </li>*@
+                    <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Search by Irregular Verbs</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Search by My Vocabulary</button>
+                </li>*@
         </ul>
         <div class="tab-content" id="pills-tabContent">
 
@@ -54,7 +55,13 @@
                         {
                             <tr class="row ms-2">
                                 <td class="row col-8">
-                                    <span class="entext"><i class="bi bi-chat-square-quote-fill me-2"></i>@item.EnText</span>
+                                    <span class="entext">
+                                        <i class="bi bi-chat-square-quote-fill me-2"></i>@item.EnText
+                                        <span class="btn-group btn-sm" role="group" aria-label="Basic example">
+                                            <button data-text="@item.EnText" type="button" class="speak btnnopadding btn-outline-custom1"><i class="bi bi-volume-up-fill"></i></button>
+                                            <button type="button" class="btnnopadding btn-outline-custom1"><i class="bi bi-pause-fill"></i></button>
+                                        </span>
+                                    </span>
                                     <span class="vitext mb-2">&emsp;<i class="bi bi-arrow-return-right me-2"></i>@item.ViText</span>
                                     <span class="timeupdated">&emsp;&emsp;&ensp;&nbsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
                                     <span class="dialogname">&emsp;&emsp;<i class="bi bi-card-list me-2"></i>@item.DialogName</span>
@@ -63,7 +70,7 @@
                                 <td class="col-4 d-flex flex-row-reverse">
                                     <div class="btn-group dropstart btnsave">
                                         <div class="gn @(item.GroupName.IsEmpty() ? null : "my-auto rounded-start bg-custom3 py-1" )"> <span class=" px-@(item.GroupName.IsEmpty() ? "0" : "2" ) ">@item.GroupName</span>  </div>
-                                        <button type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-custom2" : "custom2") btn-sm my-4 rounded-pill dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <button @(User.Identity.GetUserId() == null ? "hidden" : "") type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-custom2" : "custom2") btn-sm my-4 rounded-pill dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                             <span class="bi bi-@(!item.UserSentenceId.HasValue ? "info-lg" : "check-lg")"></span>
                                         </button>
                                         <ul class="dropdown-menu savedropdown" aria-labelledby="dropdownMenuSave">
@@ -91,56 +98,59 @@
             <div class="tab-pane fade" id="pills-dialog" role="tabpanel" aria-labelledby="pills-dialog-tab">
                 <table class="table mt-4">
                     <tbody>
-                    @{
-                        
-                        foreach (var item in dialogs)
-                        {
-                            <tr class="row mx-1">
-                                <td class="row col-8">
-                                    <span class="entext"><i class="bi bi-chat-square-text-fill me-2"></i>@item.Name</span> 
-                                    <span class="timeupdated">&emsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
-                                </td>
-                                <td class="col-4">
-                                    @item.DateModified
-                                </td>
-                            </tr>
+                        @{
+
+                            foreach (var item in dialogs)
+                            {
+                                <tr class="row mx-1">
+                                    <td class="row col-8">
+                                        <span class="entext"><i class="bi bi-chat-square-text-fill me-2"></i>@item.Name</span>
+                                        <span class="timeupdated">&emsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
+                                    </td>
+                                    <td class="col-4">
+                                        @item.DateModified
+                                    </td>
+                                </tr>
+                            }
                         }
-                    }
                     </tbody>
                 </table>
                 <div id="paging" style="text-align: center">
                     <span class="badge rounded-pill bg-custom2">
                         &nbsp; Page @(dialogs.PageCount < dialogs.PageNumber ? 0 : dialogs.PageNumber) of @dialogs.PageCount &nbsp;
                     </span>
-                    @Html.PagedListPager(dialogs, dialogIndex  => Url.Action("Index", new { dialogIndex, searchText = searchText }))
+                    @Html.PagedListPager(dialogs, dialogIndex => Url.Action("Index", new { dialogIndex, searchText = searchText }))
                 </div>
             </div>
 
             @* Tra từ vựng cá nhân *@
             @*<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-                some placeholder content the Home tab's associated content. Clicking another tab will toggle the visibility of this one for
-            </div>*@
+                    some placeholder content the Home tab's associated content. Clicking another tab will toggle the visibility of this one for
+                </div>*@
         </div>
     </div>
 
     <!-- Modal -->
     <div class="modal fade" id="bsModal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
-            <div class="modal-content"></div>
+            <div class="modal-content">
+
+            </div>
         </div>
     </div>
 
     @section scripts {
         @*<script type="text/javascript">
-            $(function () {
-                setTimeout(function myfunction() {
-                    $('.aftersearch').css('display', 'none').css('transition', 'all 0.3s cubic-bezier(0.37, 0.01, 0.06, 0.14) 0s')
-                }, 2000);
-            })
-        </script>*@
+                $(function () {
+                    setTimeout(function myfunction() {
+                        $('.aftersearch').css('display', 'none').css('transition', 'all 0.3s cubic-bezier(0.37, 0.01, 0.06, 0.14) 0s')
+                    }, 2000);
+                })
+            </script>*@
 
         <script src="~/Scripts/jquery.form.js"></script>
         <script src="~/Scripts/Components/dropdown-sentence.js"></script>
+        <script src="~/Scripts/Components/Text-to-speech.js"></script>
         <script type="text/javascript">
             var Main = (function () {
                 return {
@@ -151,6 +161,10 @@
                         });
                         getUserGroups();
                         handleSaveRemove();
+                        $('.speak').on('click', function () {
+                            var sentence = $(this).attr('data-text').substring(2);
+                            textToSpeech.speak(sentence);
+                        });
                     },
                 }
             })();
