update ui dialog

--- a/Bilinguals/Views/Home/About.cshtml
+++ b/Bilinguals/Views/Home/About.cshtml
@@ -40,7 +40,7 @@
             <button id="play" type="submit">Play</button>
         </div>
     </form>
-    <script src="~/Scripts/text-to-speech.js"></script>
+    @*<script src="~/Scripts/text-to-speech.js"></script>*@
 
     @*<h1>Text to Speech Converter</h1>
 
