--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                                         <i class="bi bi-chat-square-quote-fill me-2"></i>@item.EnText
                                         <span class="btn-group btn-sm" role="group" aria-label="Basic example">
                                             <button data-text="@item.EnText" type="button" class="speak btnnopadding btn-outline-custom1"><i class="bi bi-volume-up-fill"></i></button>
-                                            <button type="button" class="btnnopadding btn-outline-custom1"><i class="bi bi-pause-fill"></i></button>
+                                            @*<button type="button" class="btnnopadding btn-outline-custom1"><i class="bi bi-pause-fill"></i></button>*@
                                         </span>
                                     </span>
                                     <span class="vitext mb-2">&emsp;<i class="bi bi-arrow-return-right me-2"></i>@item.ViText</span>
