--- a/Bilinguals/Views/Dialogs/Index.cshtml
+++ b/Bilinguals/Views/Dialogs/Index.cshtml
@@ -2,93 +2,51 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Dialogs";
     var searchText = Request.QueryString["searchText"];
 }
-
-<h2>Index</h2>
-
-@*<p>
-        @Html.ActionLink("Create New", "Create")
-    </p>*@
-
-<form>
-    <div class="input-group" style="width: 350px;">
-        <input style="border-radius: 10px 0 0 10px" type="text" class="form-control" id="searchText" name="searchText" value="@searchText" placeholder="Nhập câu hội thoại">
-        <button id="btnsearch" style="border-radius: 0 10px 10px 0" class="btn btn-outline-primary"><i class="bi bi-search"></i></button>
+<link href="~/Content/css/bg-animation-card-dialog.css" rel="stylesheet" />
+<div class="py-2 row row-cols-1 row-cols-lg-2">
+    <div class="col">
+        <h3>All Dialogs</h3>
     </div>
-</form>
+    <div class="col d-flex flex-row-reverse">
+        <form style="width:325px">
+            <div class="input-group">
+                <input autocomplete="off" style="border-radius: 10px 0 0 10px" type="text" class="form-control" id="searchText" name="searchText" value="@searchText" placeholder="Enter dialog">
+                <button id="btnsearch" style="border-radius: 0 10px 10px 0" class="btn btn-custom1"><i class="bi bi-search"></i></button>
+            </div>
+        </form>
+    </div>
+</div>
+<hr style="color: #092139;opacity:0.5 !important" />
 
-@*@if (Model.Count > 0)
-    {
-        <table class="table">
-            <tr>
-                <th>
-                    Name
-                </th>
-                <th>
-                    DateCreated
-                </th>
-                <th>
-                    DateModified
-                </th>
-                <th></th>
-            </tr>
+@if (Model.Count > 0)
+{
+    <div id="custom-cards">
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-2">
 
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DateCreated)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DateModified)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                        <button data-dialogid="@item.Id" data-userdialogid="@item.UserDialogId" class="btn-save-remove btn btn-sm btn-@(!item.UserDialogId.HasValue ? "outline-primary":"primary")" title="@(item.UserDialogId.HasValue ? "Remove from My Dialogs" : "Save to My Dialogs")">
-                            <span class="bi bi-@(!item.UserDialogId.HasValue ? "bookmark-plus":"bookmark-check")"></span>
-                        </button>
-                    </td>
-                </tr>
-            }
-
-        </table>
-
-
-    }*@
-@if (Model.Count > 0)
-{
-    <div class="py-5" id="custom-cards">
-        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-
-           @foreach (var item in Model)
-            {
                 <div class="col">
-                    <div class="card card-dialog h-100 overflow-hidden text-white bg-black rounded-pill" style="background-image: url('unsplash-photo-2.jpg');text-decoration: none">
+                    <div class="gradient-background card card-dialog h-100 overflow-hidden text-white bg-black rounded-pill">
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white">
-                            <a href="~/dialogs/details/@item.Id" style="text-decoration: none">
+                            <a class="textdialog" href="~/dialogs/details/@item.Id" style="text-decoration: none">
                                 <h4 class="pt-2 mt-3 mb-4 fw-bold text-white">@item.Name</h4>
                             </a>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
-                                    <span data-dialogid="@item.Id" data-userdialogid="@item.UserDialogId" class="btn-save-remove btn btn-sm btn-@(!item.UserDialogId.HasValue ? "outline-primary":"primary")" title="@(item.UserDialogId.HasValue ? "Remove from My Dialogs" : "Save to My Dialogs")">
-                                        <span class="bi bi-@(!item.UserDialogId.HasValue ? "bookmark-plus":"bookmark-check")"></span>
+                                    <span data-dialogid="@item.Id" data-userdialogid="@item.UserDialogId" style="font-size:13px" class="btn-save-remove btn rounded-pill1 btn-sm btn-@(!item.UserDialogId.HasValue ? "custom1":"secondary")" title="@(item.UserDialogId.HasValue ? "Remove from My Dialogs" : "Save to My Dialogs")">
+                                        @(!item.UserDialogId.HasValue ? "SUBSCRIBE":"SUBSCRIBED")
                                     </span>
-                                    @*<img src="~/Avatars/IMG_3896e3ae2165-9903-4429-8b59-9f8b962b81dd.JPG" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">*@
                                 </li>
                                 <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-                                    <small>Pakistan</small>
+                                    <i class="bi bi-people me-2"></i>
+                                    <small>5</small>
                                 </li>
                                 <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-                                    <small>4d</small>
+                                    <i class="bi bi-calendar3 me-2"></i>
+                                    <small>@(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</small>
                                 </li>
                             </ul>
                         </div>
@@ -98,7 +56,7 @@
 
         </div>
     </div>
-    <div id="paging" style="text-align: center">
+    <div id="paging" class="pt-5" style="text-align: center">
         Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
         @Html.PagedListPager(Model, pageIndex => Url.Action("Index", new { pageIndex, searchText = searchText }))
     </div>
@@ -130,14 +88,14 @@
                     url: url,
                     success: function (newUserDialogId) {
                         if (!newUserDialogId) {
-                            _this.removeClass('btn-primary').addClass('btn-outline-primary')
+                            _this.removeClass('btn-secondary').addClass('btn-custom1')
                                 .data('userdialogid', null)
-                                .find('.bi').removeClass('bi-bookmark-check').addClass('bi-bookmark-plus')
+                                .text('SUBSCRIBE')
                                 .prop('title', 'Save to My Dialogs');
                         } else {
-                            _this.removeClass('btn-outline-primary').addClass('btn-primary')
+                            _this.removeClass('btn-custom1').addClass('btn-secondary')
                                 .data('userdialogid', newUserDialogId)
-                                .find('.bi').removeClass('bi-bookmark-plus').addClass('bi-bookmark-check')
+                                .text('SUBSCRIBED')
                                 .prop('title', 'Remove from My Dialogs');
                         }
                     }
