--- a/Bilinguals/Views/Groups/MySentence.cshtml
+++ b/Bilinguals/Views/Groups/MySentence.cshtml
@@ -1,41 +1,75 @@
 ﻿@model IEnumerable<Bilinguals.Domain.Models.Group>
 
 @{
-    ViewBag.Title = "MySentence";
+    ViewBag.Title = "My Sentence";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link href="~/Content/css/my-sentence.css" rel="stylesheet" />
 
-<h2>My Sentence</h2>
+<h2 class="ms-4">My Sentence</h2>
 
 <div class="d-flex align-items-start">
     <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
         @foreach (var item in Model)
         {
-            <div class="card nav-link" id="v-pills-@item.Id-tab" data-bs-toggle="pill" data-bs-target="#v-pills-@item.Id" role="tab" aria-controls="v-pills-@item.Id" aria-selected="true" style="width: 18rem;">
+            <div class="card nav-link mt-3 bg-light shadow-custom1" id="v-pills-@item.Id-tab" data-bs-toggle="pill" data-bs-target="#v-pills-@item.Id" role="tab" aria-controls="v-pills-@item.Id" aria-selected="true" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">@item.Name</h5>
-                    <p class="card-text"><small class="text-muted">Last updated on @item.DateModified</small></p>
-                    <p class="card-text">@item.Description</p>
-                    <a href="#" class="btn btn-primary">Edit</a>
-                    <a href="#" class="btn btn-primary">Delete</a>
+                    <p class="card-text"><small class="text-muted"> <i class="bi bi-calendar3 me-2"></i> @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</small></p>
+                    @*<p class="card-text">@item.Description </p>*@
+                    <span>
+                        <a href="~/groups/edit/@item.Id" class="btn btn-sm rounded-pill1 btn-custom1">Edit</a>
+                        <a href="~/groups/delete/@item.Id" class="btn btn-sm rounded-pill1 btn-danger">Delete</a>
+                    </span>
                 </div>
             </div>
         }
     </div>
-    <div class="tab-content" id="v-pills-tabContent">
+    <div class="tab-content w-100" id="v-pills-tabContent">
         @foreach (var item in Model)
         {
             <div class="tab-pane fade" id="v-pills-@item.Id" role="tabpanel" aria-labelledby="v-pills-@item.Id-tab">
                 @foreach (var i in item.UserSentences)
                 {
-                    @i.Sentence.EnText
-                    <div><br /></div>
+                    <div class="mt-3 ms-3 bg-white shadow-sm rounded-pill">
+                        <div class="row mx-3">
+                            <span class="entext mt-3">
+                                <i class="bi bi-chat-square-quote-fill me-2"></i>@i.Sentence.EnText
+                                <span class="btn-group btn-sm" role="group" aria-label="Basic example">
+                                    <button data-text="@i.Sentence.EnText" type="button" class="speak btnnopadding btn-outline-custom1"><i class="bi bi-volume-up-fill"></i></button>
+                                </span>
+                            </span>
+                            <span class="vitext mb-2">&emsp;<i class="bi bi-arrow-return-right me-2"></i>@i.Sentence.ViText</span>
+                            <span class="timeupdated mb-3">&emsp;&emsp;&ensp;&nbsp;<i class="bi bi-clock me-1"></i>Last updated on @(!i.Sentence.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
+                        </div>
+                    </div>
                 }
-
             </div>
         }
         <div class="tab-pane fade show active">
-            
+            <div class="mt-3 ms-3 bg-white shadow-sm rounded-pill" style="height: 318px">
+                <br />
+                <br />
+                <h3 class="text-center pt-5">
+                    My sentences repository
+                </h3>
+                <h1 class="text-center">
+                    <i class="bi bi-emoji-smile"></i>
+                </h1>
+            </div>
         </div>
     </div>
 </div>
+
+@section scripts{
+    <script type="text/javascript">
+        $(function () {
+            $('.speak').on('click', function () {
+                var sentence = $(this).attr('data-text').substring(2);
+                textToSpeech.speak(sentence);
+            });
+        });
+    </script>
+    <script src="~/Scripts/Components/Text-to-speech.js"></script>
+}
+
