update some view

--- a/Bilinguals/Content/css/my-sentence.css
+++ b/Bilinguals/Content/css/my-sentence.css
@@ -40,6 +40,10 @@
     border: none;
 }
 
+.nav-pills .nav-link:hover {
+    background-color: #d4e0ec !important;
+}
+
 .vitext {
     font-family: 'Nunito Sans', sans-serif;
     color: #00356a;
