--- a/Bilinguals/Views/Groups/MySentence.cshtml
+++ b/Bilinguals/Views/Groups/MySentence.cshtml
@@ -6,8 +6,6 @@
 }
 <link href="~/Content/css/my-sentence.css" rel="stylesheet" />
 
-<h2 class="ms-4">My Sentence</h2>
-
 <div class="d-flex align-items-start">
     <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
         @foreach (var item in Model)
@@ -17,9 +15,9 @@
                     <h5 class="card-title">@item.Name</h5>
                     <p class="card-text"><small class="text-muted"> <i class="bi bi-calendar3 me-2"></i> @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</small></p>
                     @*<p class="card-text">@item.Description </p>*@
-                    <span>
-                        <a href="~/groups/edit/@item.Id" class="btn btn-sm rounded-pill1 btn-custom1">Edit</a>
-                        <a href="~/groups/delete/@item.Id" class="btn btn-sm rounded-pill1 btn-danger">Delete</a>
+                    <span class="d-flex flex-row-reverse">
+                        <a href="~/groups/edit/@item.Id" class="btn btn-sm rounded-pill1 btn-custom1 ms-1"><small>EDIT</small></a>
+                        <a href="~/groups/delete/@item.Id" class="btn btn-sm rounded-pill1 btn-danger"><small>DELETE</small></a>
                     </span>
                 </div>
             </div>
@@ -47,7 +45,7 @@
             </div>
         }
         <div class="tab-pane fade show active">
-            <div class="mt-3 ms-3 bg-white shadow-sm rounded-pill" style="height: 318px">
+            <div class="mt-3 ms-3 bg-light shadow-custom1 rounded-pill" style="height: 318px">
                 <br />
                 <br />
                 <h3 class="text-center pt-5">
